# glee

./: .gitignore  CMakeLists.txt  GLee.sln  libglee.pc.cmake
Common/: ArrayList.h  Config.h.in  Exception.h  String.cpp  String.h  XMLFile.cpp  XMLFile.h  stdafx.h
DATA/GLeeGenInput/: GLeeCTop.txt  GLeeFunctions.txt  GLeeHBottom.txt  License.txt  exceptions.txt  extensions.xml  gleehtop.txt
DATA/GLeeXMLGenInput/: GLExtIgnore.txt  HeaderIgnore.txt
DATA/GLeeXMLGenInput/PatchedSpecs/NV/: gpu_program4.txt
DATA/GLeeXMLGenInput/specs/extspecs/: index.html
DATA/GLeeXMLGenInput/specs/extspecs/specs/APPLE/: client_storage.txt  element_array.txt  flush_buffer_range.txt  vertex_array_object.txt  vertex_array_range.txt
DATA/GLeeXMLGenInput/specs/extspecs/specs/ARB/: depth_buffer_float.txt  draw_instanced.txt  framebuffer_object.txt  geometry_shader4.txt  glx_create_context.txt  instanced_arrays.txt  map_buffer_range.txt  point_parameters.txt  shader_objects.txt  texture_compression_rgtc.txt  texture_rg.txt  vertex_array_object.txt  vertex_blend.txt  vertex_buffer_object.txt  vertex_shader.txt  wgl_create_context.txt  wgl_pixel_format.txt
DATA/GLeeXMLGenInput/specs/extspecs/specs/ATI/: texture_env_combine3.txt
DATA/GLeeXMLGenInput/specs/extspecs/specs/EXT/: bgra.txt  blend_minmax.txt  clip_volume_hint.txt  cull_vertex.txt  depth_bounds_test.txt  direct_state_access.txt  draw_buffers2.txt  draw_range_elements.txt  geometry_shader4.txt  gpu_shader4.txt  multi_draw_arrays.txt  point_parameters.txt  texture_array.txt  texture_buffer_object.txt  texture_compression_latc.txt  texture_compression_rgtc.txt  texture_compression_s3tc.txt  texture_from_pixmap.txt  texture_integer.txt  texture_lod_bias.txt  texture_mirror_clamp.txt  texture_swizzle.txt  transform_feedback.txt  vertex_array_bgra.txt  wgl_extensions_string.txt
DATA/GLeeXMLGenInput/specs/extspecs/specs/NV/: conditional_render.txt  copy_depth_to_color.txt  depth_buffer_float.txt  depth_clamp.txt  explicit_multisample.txt  fence.txt  fog_distance.txt  fragment_program.txt  fragment_program4.txt  geometry_program4.txt  geometry_shader4.txt  glx_video_out.txt  gpu_program4.txt  half_float.txt  multisample_filter_hint.txt  occlusion_query.txt  packed_depth_stencil.txt  parameter_buffer_object.txt  pixel_data_range.txt  point_sprite.txt  present_video.txt  primitive_restart.txt  register_combiners.txt  register_combiners2.txt  render_depth_texture.txt  render_texture_rectangle.txt  texgen_reflection.txt  texture_compression_vtc.txt  texture_env_combine4.txt  texture_expand_normal.txt  texture_rectangle.txt  texture_shader.txt  texture_shader2.txt  texture_shader3.txt  transform_feedback.txt  transform_feedback2.txt  vertex_array_range.txt  vertex_array_range2.txt  vertex_program.txt  vertex_program1_1.txt  (+3 more)
DATA/GLeeXMLGenInput/specs/extspecs/specs/S3/: s3tc.txt
DATA/GLeeXMLGenInput/specs/extspecs/specs/SGIX/: pbuffer.txt
DATA/output/: GLee.c  GLee.h  GLee.lib  extensionList.txt
GLeeGen/: CMakeLists.txt  GLeeGen.cpp  GLeeGen.h  GLeeGen.vcproj  GleeGen.h
GLeeScripts/: GLeeScripts.vcproj
GLeeScripts/grab/: grabALL.bat  grabheaders.bat
GLeeScripts/linux/: package.sh  test.sh
GLeeScripts/publish/: prepareForRelease.bat
GLeeTest/: ArrayList.h  GLSL Test README.txt  GLeeTest.cpp  GLeeTest.vcproj  String.cpp  String.h  TestGLSL.cpp  TestGLSL.h  simple.vert  stdafx.h
GLeeTestMac/: Carbon OpenGL.pd  Info.plist  Read me  SurfaceGeometry.c  SurfaceGeometry.h  drawInfo.h  glCheck.c  glCheck.h  gl_Prefix.pch  main.c  main.h  trackball.c  trackball.h  version.plist
GLeeTestMac/English.lproj/: InfoPlist.strings
GLeeTestMac/English.lproj/main.nib/: info.nib  objects.xib
GLeeTestMac/English.lproj/main~.nib/: info.nib  objects.xib
GLeeTestMac/GLCarbonAGLWindow.app/Contents/: Info.plist
GLeeTestMac/GLCarbonAGLWindow.app/Contents/MacOS/: GLCarbonAGLWindow
GLeeTestMac/GLCarbonAGLWindow.app/Contents/Resources/English.lproj/main.nib/: objects.xib
GLeeTestMac/GLCarbonAGLWindow.xcodeproj/: ben.mode1v3  ben.pbxuser  ggs.pbxuser  project.pbxproj
GLeeTestMac/HID Support/: HIDSupport.c  HIDSupport.h  HID_Config_Utilities.c  HID_Config_Utilities.h  HID_Error_Handler.c  HID_Error_Handler.h  HID_Name_Lookup.c  HID_Name_Lookup.h  HID_Queue_Utilities.c  HID_Queue_Utilities.h  HID_Utilities.c  HID_Utilities.h  HID_Utilities_External.h  HID_Utilities_Internal.h
GLeeXMLGen/: CMakeLists.txt  GLeeXMLGen.cpp  GLeeXMLGen.h  GLeeXMLGen.vcproj  regexp_wrapper.h
GLeeXMLGen/regexp/: Makefile  Makefile_LINUX  Matcher.cpp  Matcher.html  Pattern.cpp  Pattern.html  WCMatcher.cpp  WCPattern.cpp  test.cpp
GLeeXMLGen/regexp/regexp/: Matcher.h  Pattern.h  WCMatcher.h  WCPattern.h
Lib/: GLee.lib  GLeeLib.vcproj
include/GL/: GLee.h
